knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Error_Log__c/fields/Error_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Error_Timestamp__c</fullName>
    <label>Error Timestamp</label>
    <type>DateTime</type>
</CustomField>