knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Error_Log__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <label>Error Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>IP</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>