knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Error_Log__c/fields/Integraiton_Direction__c.field-meta.xml
<CustomField>
    <fullName>Integraiton_Direction__c</fullName>
    <label>Integraiton Direction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>