knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Error_Log__c/fields/Integration_Process__c.field-meta.xml
<CustomField>
    <fullName>Integration_Process__c</fullName>
    <label>Integration Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>