knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Error_Log__c/fields/Is_Handled__c.field-meta.xml
<CustomField>
    <fullName>Is_Handled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Handled</label>
    <type>Checkbox</type>
</CustomField>